# autoresearch-rs

./: .gitignore  README.md  autoresearch_cli.py  prepare.py  program.md  pyproject.toml  train.py
place_these_in_root/: ABOUT.md  BRAND.md  FEATURES.md  README.md  REFLECTION.json  REFLECTION.md  TODO.md  results.tsv
tests/: test_prepare.py
