[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-apps"
version = "0.1.0"
description = "Autonomous benchmarked web-app research loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
autoresearch = "autoresearch_cli:main"

[tool.setuptools]
py-modules = ["autoresearch_cli", "prepare", "train"]
